<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/card_number_input_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layoutDirection="ltr">
        <com.stripe.android.view.CardNumberTextInputLayout android:id="@id/tl_card_number" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stripe_add_card_element_vertical_margin" android:hint="@string/stripe_acc_label_card_number" style="@style/Stripe.CardMultilineWidget.TextInputLayout">
            <com.stripe.android.view.CardNumberEditText android:id="@id/et_card_number" android:nextFocusDown="@id/et_expiry" android:layout_width="fill_parent" android:layout_height="wrap_content" android:drawablePadding="@dimen/stripe_card_icon_multiline_padding" android:imeOptions="actionNext" android:nextFocusForward="@id/et_expiry" />
        </com.stripe.android.view.CardNumberTextInputLayout>
        <com.stripe.android.view.CardBrandView android:layout_gravity="end|center" android:id="@id/card_brand_view" android:layout_width="wrap_content" android:layout_height="@dimen/stripe_card_brand_view_height" android:layout_marginTop="@dimen/stripe_card_icon_padding" android:layout_marginBottom="@dimen/stripe_card_icon_padding" android:layout_marginEnd="@dimen/stripe_card_icon_padding" />
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/second_row_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:layoutDirection="ltr">
        <com.google.android.material.textfield.TextInputLayout android:id="@id/tl_expiry" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stripe_add_card_element_vertical_margin" android:hint="@string/stripe_acc_label_expiry_date" android:layout_weight="1.0" android:layoutDirection="ltr" android:layout_marginEnd="@dimen/stripe_add_card_expiry_middle_margin" app:placeholderText="@string/stripe_expiry_date_hint" style="@style/Stripe.CardMultilineWidget.TextInputLayout">
            <com.stripe.android.view.ExpiryDateEditText android:id="@id/et_expiry" android:nextFocusDown="@id/et_cvc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/stripe_cmw_edit_text_minheight" android:digits="@string/stripe_expiration_date_allowlist" android:imeOptions="actionNext" android:nextFocusForward="@id/et_cvc" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@id/tl_cvc" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stripe_add_card_element_vertical_margin" android:layout_weight="1.0" android:layoutDirection="ltr" android:layout_marginEnd="@dimen/stripe_add_card_expiry_middle_margin" app:placeholderText="@string/stripe_cvc_multiline_helper" style="@style/Stripe.CardMultilineWidget.TextInputLayout">
            <com.stripe.android.view.CvcEditText android:id="@id/et_cvc" android:nextFocusDown="@id/et_postal_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/stripe_cmw_edit_text_minheight" android:imeOptions="actionNext" android:nextFocusForward="@id/et_postal_code" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:id="@id/tl_postal_code" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/stripe_add_card_element_vertical_margin" android:layout_weight="1.0" app:placeholderText="@string/stripe_postalcode_placeholder" style="@style/Stripe.CardMultilineWidget.TextInputLayout">
            <com.stripe.android.view.PostalCodeEditText android:id="@id/et_postal_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/stripe_cmw_edit_text_minheight" android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</merge>